fixed button bug that was affecting menu

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           <div class="card-body camel">
             <h5 class="card-title">Camel Club Story</h5>
             <p class="card-text">Follow Cam Hump and Mel Hoof as they discover the Camel Club</p>
-            <button id="s1"> Show Story <span id="pointer" class="side">▾</span></button>
+            <button class="b1" id="s1"> Show Story <span id="pointer" class="side">▾</span></button>
           </div>
         </div>
         <div class="card story black-text" style="width: 18rem;">
@@ -301,7 +301,7 @@
           <div class="card-body camel">
             <h5 class="card-title">Part II</h5>
             <p class="card-text">Lore behind Camel Club's Beginnings</p>
-            <button disabled> Coming Soon </button>
+            <button class="b1" disabled> Coming Soon </button>
           </div>
         </div>
         <div class="card story black-text" style="width: 18rem;">
@@ -309,7 +309,7 @@
           <div class="card-body camel">
             <h5 class="card-title">Part III</h5>
             <p class="card-text">More about Camel Club's Evolution</p>
-            <button disabled> Coming Soon </button>
+            <button class="b1" disabled> Coming Soon </button>
           </div>
         </div> 
     </div>
