--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
 
     <a class="anchor" id="story"></a>
     <section  class="p-3 p-md-4 m-3 m-md-4 black rounded-element">
+      <h1 class="text-center">Stories</h1>
       <div id="storyContainer">
         <div class="card story black-text" style="width: 18rem;">
           <img class="card-img-top" src="media/club.webp" alt="Card image cap">
